# unusonic

./: .eslint-baseline.json  .gitignore  .loc-baseline.json  .mcp.json  .vercelignore  CLAUDE.md  eslint.config.mjs  instrumentation-client.ts  middleware.ts  next.config.ts  package-lock.json  package.json  planning-primer.md  planning-queue.md  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json  vitest.config.ts
apps/companion/src-tauri/: Cargo.toml  tauri.conf.json
apps/companion/src-tauri/icons/: icon.icns
apps/companion/src-tauri/src/: commands.rs  lib.rs  main.rs
apps/companion/src-tauri/src/api/: server.rs  session.rs
apps/companion/src-tauri/src/sync/: engine.rs  mod.rs  rekordbox.rs  serato.rs
apps/companion/src-tauri/src/watcher/: fs_watcher.rs
docs/: onboarding-subscription-architecture.md  stripe-billing-setup.md
e2e/: auth.setup.ts  smoke.spec.ts
eslint-plugins/: stage-engineering.js
planning/: 2026-04-11-aion-phase-a-voice-setup-draft.md  2026-04-11-aion-phase-a-voice-setup-first-draft.md  2026-04-12-aion-phase-a-voice-setup-draft.md  2026-04-14-aion-phase-a-already-shipped.md  2026-04-15-aion-phase-a-gap-audit.md  2026-04-16-aion-phase-a-voice-setup.md  2026-04-17-aion-phase-a-voice-setup.md  2026-04-18-aion-phase-a-onboarding-end-to-end.md  2026-04-19-aion-phase-a-unblock-voice-setup.md  2026-04-20-aion-phase-a-voice-draft-status.md  2026-04-21-aion-phase-a-voice-setup.md  2026-04-22-aion-phase-a-voice-setup-draft.md  2026-04-23-aion-phase-a-voice-to-draft.md  2026-04-28-aion-phase-a-scope.md  (+69 more)
(+2952 files in other folders)
