[package]
name = "unusonic-bridge"
version = "0.1.0"
description = "Unusonic Bridge — sync DJ programs to local software"
authors = ["Unusonic"]
edition = "2021"

[lib]
name = "unusonic_bridge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "unusonic-bridge"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
axum = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.22"
notify = "7"
keyring = { version = "3", features = ["apple-native", "windows-native"] }
quick-xml = { version = "0.37", features = ["serialize"] }
sha2 = "0.10"
hex = "0.4"
dirs = "6"
walkdir = "2"
strsim = "0.11"
unicode-normalization = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
hostname = "0.4"
log = "0.4"
env_logger = "0.11"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
